fix end-spacing projects. rename disney project.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1940,7 +1940,7 @@ button,
   bottom: 0;
   left: 0; }
 #projects p {
-  margin-bottom: 4em; }
+  margin-bottom: 0; }
 
 /* Wrapper */
 #wrapper {
@@ -1968,7 +1968,7 @@ button,
   #main > .inner {
     padding: 0 6em 0.1em 6em ;
     margin: 0 auto;
-    max-width: 1260px; }
+    max-width: 1360px; }
     #main > .inner > section {
       padding: 6em 0 4em 0 ;
       border-top: solid 2px rgba(210, 215, 217, 0.75); }
