--- a/assets/sass/components/_posts.scss
+++ b/assets/sass/components/_posts.scss
@@ -191,6 +191,6 @@
 			left: 0;
 		}
 		p {
-			margin-bottom: 4em;
+			margin-bottom: 0;
 		}
 	}
