--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -14,7 +14,7 @@
 		> .inner {
 			@include padding(0, 6em);
 			margin: 0 auto;
-			max-width: 1260px;
+			max-width: 1360px;
 			// max-width: 80em;
 
 			> section {
